<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adminviewactivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avh.tour_dev.adminview"
    android:orientation="vertical"
    android:background="@drawable/backgroound11"

    >
    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/admin_list"
        android:textAllCaps="false"
        android:id="@+id/adminlist"
        android:background="#ab49b90c"
        android:layout_marginTop="70dp"
        />

    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/user_list"
        android:textAllCaps="false"
        android:id="@+id/userlist"
        android:background="#b10cb9a8"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/update_userinfo"
        android:textAllCaps="false"
        android:id="@+id/updateuser"
        android:background="#b1cebf1a"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_user"
        android:textAllCaps="false"
        android:id="@+id/userdelete"
        android:background="#b1f22c4a"
        android:layout_marginTop="20dp"
        />
    <Button
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/scamreport"
        android:textAllCaps="false"
        android:id="@+id/reportview"
        android:background="#eb0e78f1"
        android:layout_marginTop="20dp"
        />
   </LinearLayout>

