<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/capture5"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarAlwaysDrawHorizontalTrack="true"
    android:id="@+id/signupform"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_person_black_24dp"

            android:contentDescription="TODO" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="#000"
            android:textSize="30sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.01"
            android:src="@drawable/ic_cloud_black_24dp"
            android:contentDescription="TODO" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp">

    </View>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:layout_marginTop="25dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="20dp"
            android:id="@+id/username1">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"

            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="20dp"
            android:id="@+id/password1">

        </EditText>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp">


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"

            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="20sp"
            android:id="@+id/email1"
            android:inputType="textEmailAddress"
            >

        </EditText>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp">
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.18"
        android:hint="@string/address"

        android:textColor="#000"
        android:textColorHint="#000"
        android:textSize="20sp"
        android:id="@+id/address1">

    </EditText>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.18"
            android:hint="@string/phone"

            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="20sp"
            android:id="@+id/phone1"
            android:inputType="phone"
            >

        </EditText>
        </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/gender"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="15sp"/>

        </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp">

       <RadioGroup
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/gender"
           tools:ignore="UselessParent">
        <RadioButton
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="15sp"
            android:id="@+id/male"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="15sp"
            android:id="@+id/female"/>
       </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"/>

        <DatePicker
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"

            android:id="@+id/dob1">

        </DatePicker>

    </LinearLayout>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ab13da55"
        android:text="@string/register"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:id="@+id/register"/>
</LinearLayout>
    </ScrollView>
